fix tiny nuiance with pages width overflow

--- a/Assets/styles/forum.css
+++ b/Assets/styles/forum.css
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden scroll;
+}
+
 #post {
   width: 99%;
   position: relative;
